<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:titleTextColor="#000000"
            android:textAlignment="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbarTitle"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title"
                android:textSize="30dp"/>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <TextView
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/bottom_border"
        android:layout_weight="1"
        android:text="@string/start"
        android:fontFamily="sans-serif-light"
        android:textSize="25dp"
        />

    <TimePicker
        android:id="@+id/start_picker"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:timePickerMode="spinner"
        android:layout_weight="4"
        />

    <TextView
        android:id="@+id/duration"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/bottom_border"
        android:layout_weight="1"
        android:text="@string/duration"
        android:fontFamily="sans-serif-light"
        android:textSize="25dp"
        />
    <RadioGroup
        android:id="@+id/durationRG"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/fifteenmin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="15 min"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/custom_checkbox_background"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/thirtymin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="30 min"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/custom_checkbox_background"
            android:button="@null"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/fourtyfivemin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="45 min"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/custom_checkbox_background"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/onehour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="1 hour"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/custom_checkbox_background"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/twohours"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="2 hours"
            android:gravity="center"
            android:layout_weight="1"
            android:background="@drawable/custom_checkbox_background"
            android:button="@null"/>
    </RadioGroup>

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@drawable/bottom_border"
        android:layout_weight="1"
        android:text="@string/location"
        android:fontFamily="sans-serif-light"
        android:textSize="25dp"
        />
    <Spinner
        android:id="@+id/location_spinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:onClick="sendMessage"
        android:text="@string/submit" />
    <!--<Button-->
        <!--android:id="@+id/button_testMessenger"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="2"-->
        <!--android:onClick="callMessenger"-->
        <!--android:text="test" />-->
</LinearLayout>
